--- a/templates/tpl_view_folder.html
+++ b/templates/tpl_view_folder.html
@@ -57,7 +57,7 @@
     // 1 - showing
     let showTagsMode = 0
 
-    document.addEventListener('DOMContentLoaded', function()
+    document.addEventListener('DOMContentLoaded', () =>
     {
         // reveal on load
         const thumbs = document.querySelectorAll('.thumb')
