--- a/templates/tpl_index.html
+++ b/templates/tpl_index.html
@@ -9,12 +9,13 @@
 <body>
 <div class="header">
     <h1>Overview</h1>
-    <a href="/favs?page=1">Favourites</a>
-    <a href="/latest_study?page=1">Last study</a>
-    <a href="/tagged?page=1&tags=&tag-set=all">Search by tags</a>
-    <a href="/tags">Tags</a>
-    <a href="/tag-sets">Sets</a>
-    <a href="/image-colors">Pallets</a>
+    <a href="/favs?page=1" class="no-decor but-decor-hover">Favourites</a>
+    <a href="/latest_study?page=1" class="no-decor but-decor-hover">Last study</a>
+    <a href="/tagged?page=1&tags=&tag-set=all" class="no-decor but-decor-hover">Search by tags</a>
+    <a href="/tags" class="no-decor but-decor-hover">Tags</a>
+    <a href="/tag-sets" class="no-decor but-decor-hover">Sets</a>
+    <a href="/image-colors" class="no-decor but-decor-hover">Pallets</a>
+    <a href="/boards" class="no-decor but-decor-hover">Boards</a>
 </div>
 <div class="tiles-container">
 {% for img in images %}
