--- a/templates/tpl_view_board.html
+++ b/templates/tpl_view_board.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div class="header">
-    <a class="back-btn no-decor btn-bg-blend" href="/">&lt;</a><h1>{{ board.title }}</h1>
+    <a class="back-btn no-decor btn-bg-blend" href="{{ url_for('routes_board.view_board_all') }}">&lt;</a><h1>{{ board.title }}</h1>
 </div>
 <div id="board" class="board">
 </div>
