tags can now change their color

--- a/templates/crud/tpl_tags_add.html
+++ b/templates/crud/tpl_tags_add.html
@@ -13,6 +13,8 @@
 <form method="POST" action="/tags/add">
     <label for="tag">Tag:</label>
     <input type="text" id="tag" name="tag" required>
+    <label for="color">Color:</label>
+    <input type="text" id="color" name="color" value="1" required>
     <br>
     <input type="submit" value="Add Tag">
 </form>
