--- a/templates/crud/tpl_tags_edit.html
+++ b/templates/crud/tpl_tags_edit.html
@@ -13,6 +13,8 @@
 <form method="POST" action="/tags/edit/{{ tag.id }}">
     <label for="tag">Tag:</label>
     <input type="text" id="tag" name="tag" value="{{ tag.tag }}" required>
+    <label for="color">Color:</label>
+    <input type="text" id="color" name="color" value="{{ tag.color_id }}" required>
     <br>
     <input type="submit" value="Update Tag">
 </form>
