--- a/templates/crud/tpl_tags_list.html
+++ b/templates/crud/tpl_tags_list.html
@@ -21,7 +21,7 @@
     {% for tag in tags %}
         <tr>
             <td style="color: {{ tag.hex }}">{{ tag.id }}</td>
-            <td style="color: {{ tag.hex }}">{{ tag.tag }}</td>
+            <td style="color: {{ tag.hex }}">[{{ tag.color_id }}] {{ tag.tag }}</td>
             <td>
                 <a href="/tags/edit/{{ tag.id }}">Edit</a>
                 <form method="POST" action="/tags/delete/{{ tag.id }}" style="display: inline;">
