--- a/templates/tpl_view_board.html
+++ b/templates/tpl_view_board.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/static/styles/board.css">
     <script type="text/javascript" src="/static/js/main.js"></script>
     <script type="text/javascript" src="/static/js/image_lazy_load.js"></script>
+    <script type="text/javascript" src="/static/js/board_item.js"></script>
     <title>{{ board.title }}</title>
 </head>
 <body>
@@ -17,15 +18,10 @@
 <script>
 
     let boardImages = {}
+    let boardItems = {}
 
-    // Fetch image data from the database
     function fetchImageData()
     {
-        // Implement your logic to fetch image data from the database
-        // You can use AJAX, Fetch API, or any other method to make an HTTP request
-        // and retrieve the image paths and positions from the ImageMetadata table
-        // Return a promise that resolves with the image data
-
         return fetch('{{ url_for("routes_board.get_board_images", b_id=board.id) }}').then(r =>
             {
                 if (!r.ok) { throw new Error("Something went wrong, " + r.statusText) }
@@ -56,227 +52,20 @@
             })
     }
 
-    function renderImage(data)
-    {
-        const image = new Image()
-        image.src = data.path
-        image.onload = () =>
-        {
-            image.id = `image-${data.image_id}`
-            image.setAttribute('data-id', data.image_id)
-            image.setAttribute('data-study', data.study_url)
-            image.classList.add('draggable', 'image')
-            image.style.left = `${data.tr.tx}px`
-            image.style.top = `${data.tr.ty}px`
-            image.style.transform = `scale(${data.tr.s})`
-
-            // Add event listeners for dragging and scaling
-            addDragListeners(image)
-            addScaleListeners(image)
-            addRemoveListener(image)
-            addStudyListener(image)
-
-            document.getElementById("board").appendChild(image)
-        }
-    }
-
-    // Add drag listeners to an image
-    function addDragListeners(image)
-    {
-        let offsetX, offsetY
-
-        image.addEventListener("mousedown", startDrag)
-        image.addEventListener("touchstart", startDrag, {passive: false})
-
-        function startDrag(event)
-        {
-            if (!event.ctrlKey) { return }
-
-            event.preventDefault()
-
-            if (event.type === "touchstart")
-            {
-                offsetX = event.touches[0].clientX - image.offsetLeft
-                offsetY = event.touches[0].clientY - image.offsetTop
-                window.addEventListener("touchmove", dragImage, {passive: false})
-                window.addEventListener("touchend", stopDrag)
-            }
-            else
-            {
-                offsetX = event.clientX - image.offsetLeft
-                offsetY = event.clientY - image.offsetTop
-                window.addEventListener("mousemove", dragImage)
-                window.addEventListener("mouseup", stopDrag)
-            }
-        }
-
-        function dragImage(event)
-        {
-            event.preventDefault()
-
-            if (event.type === "touchmove")
-            {
-                image.style.left = `${event.touches[0].clientX - offsetX}px`
-                image.style.top = `${event.touches[0].clientY - offsetY}px`
-            }
-            else
-            {
-                image.style.left = `${event.clientX - offsetX}px`
-                image.style.top = `${event.clientY - offsetY}px`
-            }
-        }
-
-        function stopDrag()
-        {
-            if (event.type === "touchend") {
-                window.removeEventListener("touchmove", dragImage)
-                window.removeEventListener("touchend", stopDrag)
-            } else {
-                window.removeEventListener("mousemove", dragImage)
-                window.removeEventListener("mouseup", stopDrag)
-            }
-
-            const imageId =  parseInt(image.getAttribute('data-id'))
-            const data = boardImages[imageId]
-            data.tr.tx = parseInt(image.style.left)
-            data.tr.ty = parseInt(image.style.top)
-
-            saveImageTransform(data)
-        }
-    }
-
-    // Add scale listeners to an image
-    function addScaleListeners(image)
-    {
-        const imageId = parseInt(image.getAttribute('data-id'))
-        let scale = boardImages[imageId].tr.s
-        let startDistance, startScale
-
-        image.addEventListener("wheel", zoomImage, {passive: false})
-        image.addEventListener("touchstart", startTouchScale, {passive: false})
-        image.addEventListener("touchmove", touchScaleImage, {passive: false})
-
-        function zoomImage(event)
-        {
-            if (!event.ctrlKey) { return }
-
-            event.preventDefault()
-
-            const zoomSpeed = 0.1
-            const deltaY = event.deltaY || event.wheelDelta
-
-            if (deltaY < 0)
-            {
-                scale = Math.min(scale + zoomSpeed, 10)
-            }
-            else
-            {
-                scale -= zoomSpeed
-                scale = Math.max(scale, 0.1) // Minimum scale limit
-            }
-
-            image.style.transform = `scale(${scale})`
-
-            const imageId = parseInt(image.getAttribute('data-id'))
-            const data = boardImages[imageId]
-            data.tr.tx = parseInt(image.style.left)
-            data.tr.ty = parseInt(image.style.top)
-            data.tr.s  = scale
-            saveImageTransform(data)
-        }
-
-        function startTouchScale(event)
-        {
-            if (!event.ctrlKey) { return }
-            if (event.touches.length < 2) { return }
-
-            const touch1 = event.touches[0]
-            const touch2 = event.touches[1]
-
-            const dx = touch1.clientX - touch2.clientX
-            const dy = touch1.clientY - touch2.clientY
-            startDistance = Math.hypot(dx, dy)
-            startScale = scale
-        }
-
-        function touchScaleImage(event)
-        {
-            if (!event.ctrlKey) { return }
-            if (event.touches.length < 2) { return }
-
-            const touch1 = event.touches[0]
-            const touch2 = event.touches[1]
-
-            const dx = touch1.clientX - touch2.clientX
-            const dy = touch1.clientY - touch2.clientY
-            const distance = Math.hypot(dx, dy)
-
-            scale = (distance / startDistance) * startScale
-            scale = Math.max(scale, 0.1) // Min scale limit
-            scale = Math.min(scale, 10) // Max scale limit
-
-            image.style.transform = `scale(${scale})`
-
-            const imageId = parseInt(image.getAttribute('data-id'))
-            const data = boardImages[imageId]
-            data.tr.tx = parseInt(image.style.left)
-            data.tr.ty = parseInt(image.style.top)
-            data.tr.s  = scale
-
-            saveImageTransform(data)
-        }
-    }
-
-    function addRemoveListener(image)
-    {
-        image.addEventListener('click', (e) =>
-        {
-            if (!isX) { return }
-
-            const image_id = image.getAttribute('data-id')
-
-            image.classList.remove('op-fail')
-            image.classList.add('loading')
-            fetch(`{{ url_for('routes_board.remove_images_from_board') }}?b-id={{ board.id }}&image-id=${image_id}`)
-                .then(r =>
-                {
-                    if (!r.ok) { throw new Error("Image not removed") }
-                    image.classList.add('vis-hide')
-
-                    const imageClone = image.cloneNode(true)
-                    image.parentNode.replaceChild(imageClone, image)
-                })
-                .catch(err =>
-                {
-                    image.classList.add('op-fail')
-                    console.log(err)
-                })
-        })
-    }
-
-    function addStudyListener(image)
-    {
-        image.addEventListener('click', (e) =>
-        {
-            if (!isS) { return }
-
-            const url = image.getAttribute('data-study')
-            window.open(url, '_blank')
-        })
-    }
 
     // Initialize the board
     function initializeBoard()
     {
+        {#new BoardBoard()#}
+
         // Fetch image data from the database
         fetchImageData().then(imageData =>
         {
-            console.log(imageData)
             // Render images on the board
             imageData.images.forEach(data =>
             {
                 boardImages[data.image_id] = data
-                renderImage(data)
+                boardItems[data.image_id] = new BoardImage(data)
             })
         })
     }
@@ -288,16 +77,23 @@
     // hotkeys
     let isX = false
     let isS = false // study
+    let isSpace = false // move board
 
     document.addEventListener('keydown', (e) =>
     {
         isX = e.code === 'KeyX'
         isS = e.code === 'KeyS'
+        isSpace = e.code === 'Space'
+
+        console.log(`sp d ${isSpace}`)
     })
     document.addEventListener('keyup', (e) =>
     {
         isX = !(e.code === 'KeyX') && isX
         isS = !(e.code === 'KeyS') && isS
+        isSpace = !(e.code === 'Space') && isSpace
+
+        console.log(`sp u ${isSpace}`)
     })
 
     // end hotkeys
