--- a/static/styles/board.css
+++ b/static/styles/board.css
@@ -1,11 +1,25 @@
+body {
+    overflow: hidden;
+}
+
 .board {
     width: 100%;
     height: 100%;
+    position: absolute;
+    pointer-events: none;
+}
+
+.board-interact-bg {
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
     position: absolute;
 }
 
 .image {
     position: absolute;
+    pointer-events: auto;
 }
 
 .boards
