--- a/templates/tpl_view_board.html
+++ b/templates/tpl_view_board.html
@@ -13,6 +13,7 @@
 <div class="header">
     <a class="back-btn no-decor btn-bg-blend" href="{{ url_for('routes_board.view_board_all') }}">&lt;</a><h1>{{ board.title }}</h1>
 </div>
+<div class="board-interact-bg"></div>
 <div id="board" class="board">
 </div>
 <script>
