--- a/templates/crud/tpl_tags_add.html
+++ b/templates/crud/tpl_tags_add.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="/static/styles/global.css">
+    {% include 'tpl_part_header.html' %}
     <title>Tag add</title>
 </head>
 <body>
