--- a/templates/tpl_image.html
+++ b/templates/tpl_image.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Image ({{ image.image_id }})</title>
+    {% include 'tpl_part_header.html' %}
     <link rel="stylesheet" href="/static/styles/global.css">
     <link rel="stylesheet" href="/static/styles/image.css">
     <script type="text/javascript" src="/static/js/main.js"></script>
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="/static/js/rating.js"></script>
     <script type="text/javascript" src="/static/js/image_color_picker.js"></script>
     <script type="text/javascript" src="/static/js/study_timer.js"></script>
+	<title>Image ({{ image.image_id }})</title>
 </head>
 <body>
 <div style="display: none" id="image-id">{{ image.image_id }}</div>
