--- a/templates/tpl_view_board_all.html
+++ b/templates/tpl_view_board_all.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="/static/styles/global.css">
+    {% include 'tpl_part_header.html' %}
     <link rel="stylesheet" href="/static/styles/board.css">
     <script type="text/javascript" src="/static/js/main.js"></script>
     <script type="text/javascript" src="/static/js/image_lazy_load.js"></script>
