--- a/templates/tpl_view_folder.html
+++ b/templates/tpl_view_folder.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>{{ title }}</title>
-    <link rel="stylesheet" href="/static/styles/global.css">
+    {% include 'tpl_part_header.html' %}
     <link rel="stylesheet" href="/static/styles/gallery.css">
     <script type="text/javascript" src="/static/js/main.js"></script>
     <script type="text/javascript" src="/static/js/image_lazy_load.js"></script>
     <script type="text/javascript" src="/static/js/mut_attr_observer.js"></script>
     <script type="text/javascript" src="/static/js/rating.js"></script>
     <script type="text/javascript" src="/static/js/image_selection.js"></script>
+    <title>{{ title }}</title>
 </head>
 <body>
 <div class="header">
