renamed index page title

--- a/templates/tpl_index.html
+++ b/templates/tpl_index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="/static/styles/overview.css">
     <script type="text/javascript" src="/static/js/main.js"></script>
     <script type="text/javascript" src="/static/js/image_lazy_load.js"></script>
-    <title>Gallery overview</title>
+    <title>Overview</title>
 </head>
 <body>
 <div class="header">
