on selection mode on, background also turns green

--- a/static/styles/global.css
+++ b/static/styles/global.css
@@ -3,6 +3,11 @@ body
     background-color: #7a7676;
 }
 
+.body-sel-mode-on
+{
+    background-color: #737771 !important;
+}
+
 button
 {
     border-radius: 3%;
