--- a/templates/tpl_image.html
+++ b/templates/tpl_image.html
@@ -46,6 +46,7 @@
             <button id="tags-button" class="btn-bg-blend">T</button>
             <button id="board-button" class="btn-bg-blend">B</button>
             <button id="pallet-button" class="btn-bg-blend">plt</button>
+            <button id="open-vid-btn" class="btn-bg-blend">play</button>
         </div>
         <div class="row">
             <button class="fav btn-bg-blend" id="is-fav" value="{{ image.is_fav }}"></button>
@@ -493,6 +494,18 @@
                 copyButton.textContent = 'Copied!'
             })
         })
+
+        // video
+        const openVidBtn = document.getElementById('open-vid-btn')
+        if (pathElement.textContent.endsWith('.mp4'))
+        {
+            openVidBtn.classList.remove('vis-hide')
+            openVidBtn.addEventListener('click', (e) =>
+            {
+                e.preventDefault()
+                fetch(`/open-video?path=${encodeURI(pathElement.textContent)}`)
+            })
+        }
     })
 </script>
 </body>
