fix: quick hack. sometimes play button is pushed away from screen by the image

--- a/templates/tpl_image.html
+++ b/templates/tpl_image.html
@@ -42,11 +42,11 @@
             <span class="space"/>
             <button id="toggle-grayscale" class="btn-bg-blend" value="">Gray</button>
             <span class="space"/>
+            <button id="open-vid-btn" class="btn-bg-blend vis-hide">play</button>
             <button id="info-button" class="btn-bg-blend">info</button>
             <button id="tags-button" class="btn-bg-blend">T</button>
             <button id="board-button" class="btn-bg-blend">B</button>
             <button id="pallet-button" class="btn-bg-blend">plt</button>
-            <button id="open-vid-btn" class="btn-bg-blend">play</button>
         </div>
         <div class="row">
             <button class="fav btn-bg-blend" id="is-fav" value="{{ image.is_fav }}"></button>
