--- a/templates/tpl_index.html
+++ b/templates/tpl_index.html
@@ -15,6 +15,7 @@
     <a href="/tagged?page=1&tags=&tag-set=all" class="no-decor but-decor-hover">Search by tags</a>
     <a href="/tags" class="no-decor but-decor-hover">Tags</a>
     <a href="/tag-sets" class="no-decor but-decor-hover">Sets</a>
+    <a href="/path-tags" class="no-decor but-decor-hover">Paths</a>
     <a href="/image-colors" class="no-decor but-decor-hover">Pallets</a>
     <a href="/boards" class="no-decor but-decor-hover">Boards</a>
 </div>
